# fleam

./: .env-template  .gitignore  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: publish-to-testpypi.yml
src/fleam/: cli.py
