[project]
name = "fleam"
version = "0.1.0"
description = "example package to test publishing to pypi"
readme = "README.md"
authors = [
    { name = "Craig Richards", email = "craig@greywidget.co.uk" }
]
requires-python = ">=3.13"
dependencies = [
    "typer>=0.16.1",
]

[project.scripts]
fleam = "fleam.cli:app"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/greywidget/fleam"
Issues = "https://github.com/greywidget/fleam/issues"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
