[project]
name = "fleam"
version = "0.1.8"
description = "example package to test publishing to pypi"
readme = "README.md"
authors = [
    { name = "Craig Richards", email = "craig@greywidget.co.uk" }
]
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = "MIT"

dependencies = [
    "typer>=0.16.1",
]

[project.scripts]
fleam = "fleam.cli:app"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://github.com/greywidget/fleam"
Issues = "https://github.com/greywidget/fleam/issues"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
